@@ -7,6 +7,7 @@ What's New for OpenJPEG
 
 July 26, 2011
 ! [mickael] delete double semi-colon at end of line which generate crash on win platform
+! [mickael] use ansi c function fgets instead of GNU function getline to avoid build error with win platform
 
 July 25, 2011
 * [mickael] fixed issue 74 for trunk
